# seu-payment

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
apps/common/: authentication.py  exceptions.py  health.py  pagination.py  permissions.py
apps/common/api/: exceptions.py  pagination.py  responses.py
apps/common/middleware/: request_context.py
apps/common/tests/: test_permissions.py
apps/payments/: apps.py
apps/payments/application/use_cases/: cancel_subscription.py  create_connected_account.py  create_dispute.py  create_order.py  create_payout.py  create_promo_code.py  create_subscription.py  get_order.py  list_disputes.py  list_my_orders.py  list_promo_codes.py  process_subscription_webhook.py  process_to_processing.py  process_webhook.py  request_refund.py  update_dispute_status.py  validate_promo_code.py
apps/payments/domain/: entities.py  exceptions.py  gateway.py  repositories.py
apps/payments/infrastructure/: admin.py  audit_publisher.py  consumer.py  models.py  plan_client.py  publisher.py  repositories.py  webhook_verify.py
apps/payments/infrastructure/gateways/: __init__.py  esewa.py  khalti.py  paypal.py  retry.py  stripe.py  stripe_connect.py
apps/payments/management/commands/: consume_payments.py
apps/payments/migrations/: 0000_create_payments_schema.py  0001_initial.py  0002_add_dispute_and_multicurrency.py  0003_add_dispute_user_id.py  0004_add_subscription_models.py  0005_align_indexes.py  0006_add_stripe_connect.py  0007_add_customer_email_to_order.py  0008_allow_null_registration_id.py  0009_add_organization_id_to_payment_order.py
apps/payments/presentation/: serializers.py  urls.py  views.py
apps/payments/tests/unit/: fakes.py  test_admin_orders.py  test_audit_publisher.py  test_create_connected_account.py  test_create_order.py  test_create_payout.py  test_create_subscription.py  test_disputes.py  test_get_list_orders.py  test_list_subscriptions.py  test_order_processing.py  test_plan_client.py  test_process_webhook.py  test_promo_codes.py  test_refund_gateway.py  test_request_refund.py  test_retry.py  test_stripe_connect.py  test_subscription_org_filter.py  test_webhook_verify.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
