[project]
name = "payment-service"
version = "0.1.0"
description = "Payment processing service for the Sansaar platform."
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "cryptography>=42.0.0",
    "psycopg2-binary",
    "django-cors-headers",
    "python-decouple",
    "gunicorn",
    "redis",
    "pika",
    "drf-spectacular",
    "celery[redis]>=5.4",
    "stripe>=15.1.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "djangorestframework-stubs>=3.17.0",
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.8",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--ignore=apps/payments/tests/unit/test_create_connected_account.py",
    "--ignore=apps/payments/tests/unit/test_create_payout.py",
    "--ignore=apps/payments/tests/unit/test_stripe_connect.py",
]

[tool.ruff]
exclude = ["*/migrations/*"]
line-length = 200
target-version = "py313"
extend-exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = [
    "apps.common.api.pagination",
    "apps.common.middleware.request_context",
    "apps.payments.application.use_cases.create_connected_account",
    "apps.payments.application.use_cases.create_payout",
    "apps.payments.infrastructure.gateways.stripe_connect",
    "apps.payments.infrastructure.models",
    "apps.payments.presentation.views",
    "apps.payments.tests.unit.test_create_connected_account",
    "apps.payments.tests.unit.test_create_payout",
    "apps.payments.tests.unit.test_order_processing",
    "apps.payments.tests.unit.test_stripe_connect",
    "config.settings.base",
    "config.settings.development",
    "config.settings.production",
]
ignore_errors = true
